# bayesian-if

./: CLAUDE.md  pyproject.toml
src/bayesian_if/: agent.py  categories.py  ollama.py  play.py  reward.py  textworld_world.py  tools.py  world.py
tests/: mock_world.py  test_agent.py  test_reward.py  test_tools.py
