[project]
name = "bayesian-if"
version = "0.1.0"
description = "Bayesian decision-theoretic Interactive Fiction agent using Credence"
requires-python = ">=3.11"
dependencies = [
    "credence",
    "numpy>=1.24",
]

[project.optional-dependencies]
jericho = ["jericho>=3.0"]
textworld = ["textworld>=1.5"]
ollama = ["httpx>=0.25"]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
]
all = [
    "bayesian-if[jericho,ollama,dev]",
]

[project.scripts]
bayesian-if = "bayesian_if.play:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bayesian_if"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99

[tool.uv.sources]
credence = { path = "../credence", editable = true }

[dependency-groups]
dev = [
    "credence",
    "httpx>=0.25",
    "numpy>=1.24",
    "pytest-cov>=6.1.1",
    "pytest>=7.4",
    "ruff>=0.11.12",
]
